# Glance

./: .gitignore  CONTEXT.md  README.md  package-lock.json  package.json
.scratch/glance-mvp-system/: map.md
.scratch/glance-mvp-system/issues/: 01-lock-mvp-1-slice-sequence.md  02-define-core-helper-event-contract.md  03-build-synthetic-gaze-overlay-slice.md  04-define-core-ui-api-contract.md  05-build-ui-core-lifecycle-slice.md  06-define-calibration-flow-and-data-model.md  07-build-calibration-ui-core-slice.md  08-research-real-gaze-framework-choice.md  09-define-gaze-mapping-and-confidence-contract.md  10-build-real-camera-gaze-slice.md  11-define-helper-input-behavior.md  12-build-helper-space-esc-slice.md  13-finalize-mvp-1-acceptance-and-test-plan.md
apps/ui/: forge.config.ts  index.html  package.json  tsconfig.test.json
core/: pyproject.toml
core/src/glance_core/: calibration_contract.py  calibration_sessions.py  camera_gaze.py  diagnostics.py  gaze_mapping_contract.py  helper_events.py  paths.py  security.py  server.py  ui_contract.py
core/src/glance_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/tests/: test_calibration_contract.py  test_camera_gaze.py  test_core_ui_api_contract.py  test_gaze_mapping_contract.py  test_helper_events.py
docs/: calibration-flow-and-data-model.md  core-ui-api-contract.md  gaze-mapping-and-confidence-contract.md  helper-input-behavior-contract.md  mvp-1-acceptance-and-test-plan.md  ui-design-system.md
docs/adr/: 0001-glance-mvp-architecture.md
native/macos-helper/: Package.swift
(+20 files in other folders)
