[project]
name = "glance-core"
version = "0.1.0"
description = "Python orchestrator and gaze estimation core for Glance."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
]

[project.optional-dependencies]
vision = [
  "opencv-python",
  "mediapipe",
  "numpy",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
